--- a/trunk/nestbed/misc/server.properties
+++ b/trunk/nestbed/misc/server.properties
@@ -27,7 +27,8 @@
 # 51 Franklin Street, Fifth Floor
 # Boston, MA  02110-1301, USA.
 #
-nestbed.dir.root=/opt/nestbed
+#nestbed.dir.root=/opt/nestbed
+nestbed.dir.root=/home/adalton/src/java/nestbed
 nestbed.dir.bin=${nestbed.dir.root}/bin
 nestbed.dir.lib=${nestbed.dir.root}/lib
 nestbed.dir.lib.nesc=${nestbed.dir.lib}/nesC
@@ -35,7 +36,7 @@ nestbed.dir.programs=${nestbed.dir.root}/programs
 
 # Colon delimited list of nesC library directories
 #nestbed.libs.nesC=$(TOSDIR)/../beta/Drip:$(TOSDIR)/../beta/Drain:$(TOSDIR)/../contrib/nucleus/tos/lib/Nucleus:${nestbed.dir.lib.nesc}/NestbedControl:${nestbed.dir.lib.nesc}/ReliableComm:${nestbed.dir.lib.nesc}/UniformLossyComm:${nestbed.dir.lib.nesc}/PseudoRandom
-nestbed.libs.nesC=${nestbed.dir.lib.nesc}/ModifiedTinyOS:${nestbed.dir.lib.nesc}/NestbedControl:${nestbed.dir.lib.nesc}/MemoryProfiler
+nestbed.libs.nesC=${nestbed.dir.lib.nesc}/TraceRecorder:${nestbed.dir.lib.nesc}/ModifiedTinyOS:${nestbed.dir.lib.nesc}/NestbedControl:${nestbed.dir.lib.nesc}/MemoryProfiler
 
 nestbed.bin.get_dev_info=${nestbed.dir.bin}/get_dev_info
 nestbed.bin.set_dev_power=${nestbed.dir.bin}/set_dev_power
