--- a/trunk/nestbed/misc/server.properties
+++ b/trunk/nestbed/misc/server.properties
@@ -27,8 +27,7 @@
 # 51 Franklin Street, Fifth Floor
 # Boston, MA  02110-1301, USA.
 #
-#nestbed.dir.root=/opt/nestbed
-nestbed.dir.root=/home/adalton/src/java/nestbed
+nestbed.dir.root=/opt/nestbed
 nestbed.dir.bin=${nestbed.dir.root}/bin
 nestbed.dir.lib=${nestbed.dir.root}/lib
 nestbed.dir.lib.nesc=${nestbed.dir.lib}/nesC
