--- a/trunk/nestbed/misc/serverLog.conf
+++ b/trunk/nestbed/misc/serverLog.conf
@@ -29,26 +29,25 @@
 #
 
 
-log4j.rootLogger=DEBUG, Console
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-
-# Print the date in ISO 8601 format
-#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
-log4j.appender.Console.layout.ConversionPattern=%d [%-5p] %c{1}%n%m%n--%n
-
-# Print only messages of level WARN or above in the package com.foo.
-#log4j.logger.com.foo=WARN
-
-
-#log4j.rootLogger=DEBUG, FileAppender
-#log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
-#log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
+# log4j.rootLogger=DEBUG, Console
+# log4j.appender.Console=org.apache.log4j.ConsoleAppender
+# log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+# 
+# # Print the date in ISO 8601 format
+# #log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+# log4j.appender.Console.layout.ConversionPattern=%d [%-5p] %c{1}%n%m%n--%n
+# 
+# # Print only messages of level WARN or above in the package com.foo.
+# #log4j.logger.com.foo=WARN
 #
-#log4j.appender.FileAppender.File=/var/www/localhost/htdocs/nestbed/serverLog.txt
-## set to true for better performance
-#log4j.appender.FileAppender.BufferedIO=false
-#log4j.appender.FileAppender.MaxFileSize=500KB
-#log4j.appender.FileAppender.MaxBackupIndex=7
-#log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
-#log4j.appender.FileAppender.layout.ConversionPattern=%%log%%%d|%-5p|%c%n%m%n
+log4j.rootLogger=DEBUG, FileAppender
+log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
+
+log4j.appender.FileAppender.File=/var/www/localhost/htdocs/nestbed/serverLog.txt
+# set to true for better performance
+log4j.appender.FileAppender.BufferedIO=false
+log4j.appender.FileAppender.MaxFileSize=500KB
+log4j.appender.FileAppender.MaxBackupIndex=7
+log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.FileAppender.layout.ConversionPattern=%%log%%%d|%-5p|%c%n%m%n
